--- a/styles.css
+++ b/styles.css
@@ -18,17 +18,18 @@ a {
   color: #999;
 }
 a:hover {
-  color: #6633ff;
+  color: #3F4EA6;
 }
 
 /* Section Styles */
 
 .main-nav {
   width: 100%;
-  background: black;
+  background: transparent;
+  position: absolute;
+  top: 0;
   min-height: 30px;
   padding: 10px;
-  position: fixed;
   text-align: center;
 }
 .nav {
@@ -57,10 +58,11 @@ a:hover {
 
 header {
   text-align: center;
-  background: url('images/portland.jpg') no-repeat top center ;
+  background: url('images/portland.png') no-repeat top center ;
   background-size: cover;
   overflow: hidden;
   padding-top: 60px;
+  margin-bottom: 60px;
 }
 header {
   line-height: 1.5;
@@ -70,23 +72,26 @@ header .profile-image {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid white;
   transition: all .5s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.1) rotate(360deg);
 }
 .tag {
-  background-color: #efefef;
-  color: black;
+  color: white;
   padding: 10px;
   border-radius: 5px;
   display: table;
   margin: 10px auto;
+  font-size: 2.75em;
+  letter-spacing: -2.5px;
+  line-height: .75;
 } 
 .location {
-  background-color: #222;
-  color: red;
+  color: lightgrey;
+  font-size: 1.15em;
+  letter-spacing: -.5px;
+  line-height: 1;
 }
 .card {
   margin: 30px;
@@ -99,7 +104,7 @@ header .profile-image:hover {
   transition: all .5s;
 }
 .card:hover {
-  border-color: red;
+  border-color: #3F4EA6;
 }
 
 ul.skills {
@@ -110,16 +115,18 @@ ul.skills {
 .skills li {
   border-radius: 6px;
   display: inline-block;
-  background: red;
+  background: #3B478C;
   color: white;
   padding: 5px 10px;
   margin: 2px;
 }
 
 .skills li:nth-child(odd) {
-  background: #222222;
+  background: #4B61A6;
 }
-
+.lead {
+  margin-bottom: 20px;
+}
 footer {
   width: 100%;
   min-height: 30px;
@@ -129,27 +136,6 @@ footer {
 footer .copyright {
   top: -8px;
   font-size: .75em;
-}
-
-footer ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-footer ul li {
-  display: inline-block;
-}
-
-a.social {
-  display: inline-block;
-  text-indent: -9999px;
-  margin-left: 5px;
-  width: 30px;
-  height: 30px;
-  background-size: 30px 30px;
-  opacity: .4;
-  transition: all .5s;
 }
 
 .clearfix {
@@ -182,154 +168,7 @@ a.social {
     padding-top: 20px;
   }
 
-  main p {body {
-    margin : 0;
-    padding : 0;
-    text-align : center;
-    font-family : 'Roboto', sans-serif;
-    color : #222;
-    background : #f7f5f0;
-    }
-    a {
-    text-decoration : none;
-    color : #999;
-    }
-    a:hover {
-    color : #6633ff;
-    }
-    .main-nav {
-    width : 100%;
-    background : black;
-    min-height : 30px;
-    padding : 10px;
-    position : fixed;
-    text-align : center;
-    }
-    .nav {
-    font-weight : 700;
-    list-style-type : none;
-    margin : 0 auto;
-    padding : 0;
-    }
-    .nav .name {
-    display : block;
-    margin-right : auto;
-    color : white;
-    }
-    .nav li {
-    padding : 5px 10px 10px 10px;
-    }
-    .nav a:hover {
-    color : white;
-    }
-    header {
-    text-align : center;
-    background : url('images/portland.jpg') no-repeat center top;
-    overflow : hidden;
-    padding-top : 60px;
-    }
-    header {
-    line-height : 1.5;
-    }
-    header .profile-image {
-    margin-top : 50px;
-    width : 150px;
-    height : 150px;
-    border : 3px solid white;
-    }
-    .tag {
-    background-color : #efefef;
-    color : black;
-    padding : 10px;
-    display : table;
-    margin : 10px auto;
-    }
-    .location {
-    background-color : #222;
-    color : red;
-    }
-    .card {
-    margin : 30px;
-    padding : 20px 40px 40px;
-    max-width : 500px;
-    text-align : left;
-    background : #fff;
-    border-bottom : 4px solid #ccc;
-    }
-    .card:hover {
-    border-color : red;
-    }
-    ul.skills {
-    padding : 0;
-    text-align : center;
-    }
-    .skills li {
-    display : inline-block;
-    background : red;
-    color : white;
-    padding : 5px 10px;
-    margin : 2px;
-    }
-    footer {
-    width : 100%;
-    min-height : 30px;
-    padding : 20px 0 40px 20px;
-    }
-    footer .copyright {
-    top : -8px;
-    font-size : 0.75em;
-    }
-    footer ul {
-    list-style-type : none;
-    margin : 0;
-    padding : 0;
-    }
-    footer ul li {
-    display : inline-block;
-    }
-    a.social {
-    display : inline-block;
-    text-indent : -9999px;
-    margin-left : 5px;
-    width : 30px;
-    height : 30px;
-    }
-    a.twitter {
-    background-image : url(images/twitter.svg);
-    }
-    a.linkedin {
-    background-image : url(images/linkedin.svg);
-    }
-    a.github {
-    background-image : url(images/github.svg);
-    }
-    .clearfix {
-    clear : both;
-    }
-    @media screen {
-    .flex {
-    max-width : 1200px;
-    margin : 0 auto;
-    }
-    header {
-    min-height : 470px;
-    }
-    .nav {
-    max-width : 1200px;
-    padding : 0 30px;
-    }
-    main {
-    padding-top : 20px;
-    }
-    main p {
-    line-height : 1.6em;
-    }
-    footer {
-    font-size : 1.3em;
-    max-width : 1200px;
-    margin : 40px auto;
-    }
-    }
+  main p {
     line-height: 1.6em;
   }
 
